improve page loading and FCP font optimization

--- a/styles/input.css
+++ b/styles/input.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+body {
+  font-family: "Oswald", Arial, sans-serif;
+}
+
 @keyframes slider {
   0% {
     transform: translateX(0);
