--- a/styles/output.css
+++ b/styles/output.css
@@ -580,6 +580,9 @@
     }
   }
 }
+body {
+  font-family: "Oswald", Arial, sans-serif;
+}
 @keyframes slider {
   0% {
     transform: translateX(0);
